--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build-preview:ios": "eas build -p ios --profile ios-preview",
+    "build-preview:android": "eas build -p android --profile android-preview",
+    "run-build:ios": "eas build:run -p ios",
+    "run-build:andoid": "eas build:run -p android"
   },
   "jest": {
     "preset": "jest-expo"
@@ -33,7 +37,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-image": "~1.13.0",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
